--- a/app/Resources/AvanzuAdminThemeBundle/views/layout/default-layout.html.twig
+++ b/app/Resources/AvanzuAdminThemeBundle/views/layout/default-layout.html.twig
@@ -10,6 +10,15 @@ scratch. This page gets rid of all links and provides the needed markup only.
     </title>
     {% include('AvanzuAdminThemeBundle:Partials:_head.html.twig') %}
     {% block avanzu_head %}{% endblock %}
+
+    <style>
+        .content-wrapper, .right-side, .main-footer {
+            margin-left: 0px !important;
+        }
+        .main-sidebar .left-side {
+            margin-left: 0px !important;
+        }
+    </style>
 </head>
 {#
 BODY TAG OPTIONS:
@@ -54,9 +63,9 @@ desired effect
         <nav class="navbar navbar-static-top" role="navigation">
             {% block avanzu_navbar_toggle %}
             <!-- Sidebar toggle button-->
-            <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
-                <span class="sr-only">{{ 'Toggle navigation'|trans({}, 'AvanzuAdminTheme')  }}</span>
-            </a>
+            {#<a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">#}
+                {#<span class="sr-only">{{ 'Toggle navigation'|trans({}, 'AvanzuAdminTheme')  }}</span>#}
+            {#</a>#}
             {% endblock %}
             <!-- Navbar Right Menu -->
             <div class="navbar-custom-menu">
@@ -233,73 +242,78 @@ desired effect
             </div>
         </nav>
     </header>
+
+
     <!-- Left side column. contains the logo and sidebar -->
-    <aside class="main-sidebar">
+    {#<aside class="main-sidebar">#}
 
-        <!-- sidebar: style can be found in sidebar.less -->
-        <section class="sidebar">
+        {##}
+        {#<!-- sidebar: style can be found in sidebar.less -->#}
+        {#<section class="sidebar">#}
 
-            {% block avanzu_sidebar_user %}
-                {% if app.user is not null and is_granted('IS_AUTHENTICATED_FULLY') %}
-                    {{ render(controller('AvanzuAdminThemeBundle:Sidebar:userPanel')) }}
-                {% endif %}
-            {% endblock %}
+            {#{% block avanzu_sidebar_user %}#}
+                {#{% if app.user is not null and is_granted('IS_AUTHENTICATED_FULLY') %}#}
+                    {#{{ render(controller('AvanzuAdminThemeBundle:Sidebar:userPanel')) }}#}
+                {#{% endif %}#}
+            {#{% endblock %}#}
 
-            {% block avanzu_sidebar_search %}
-                {{ render(controller('AvanzuAdminThemeBundle:Sidebar:searchForm')) }}
-            {% endblock %}
+            {#{% block avanzu_sidebar_search %}#}
+                {#{{ render(controller('AvanzuAdminThemeBundle:Sidebar:searchForm')) }}#}
+            {#{% endblock %}#}
 
-            {% block avanzu_sidebar_nav %}
-                {% if avanzu_admin_context.knp_menu.enable %}
-                    {% include 'AvanzuAdminThemeBundle:Sidebar:knp-menu.html.twig' %}
-                {% else %}
-                    {{ render(controller('AvanzuAdminThemeBundle:Sidebar:menu', {'request':app.request})) }}
-                {% endif %}
-            {% endblock %}
-            {#
-            <!-- Sidebar user panel (optional) -->
-            <div class="user-panel">
-                <div class="pull-left image">
-                    <img src="{{ asset('theme/dist/img/user2-160x160.jpg') }}" class="img-circle" alt="User Image">
-                </div>
-                <div class="pull-left info">
-                    <p>Alexander Pierce</p>
-                    <!-- Status -->
-                    <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
-                </div>
-            </div>
+            {#{% block avanzu_sidebar_nav %}#}
+                {#{% if avanzu_admin_context.knp_menu.enable %}#}
+                    {#{% include 'AvanzuAdminThemeBundle:Sidebar:knp-menu.html.twig' %}#}
+                {#{% else %}#}
+                    {#{{ render(controller('AvanzuAdminThemeBundle:Sidebar:menu', {'request':app.request})) }}#}
+                {#{% endif %}#}
+            {#{% endblock %}#}
+            {##}
+            {#<!-- Sidebar user panel (optional) -->#}
+            {#<div class="user-panel">#}
+                {#<div class="pull-left image">#}
+                    {#<img src="{{ asset('theme/dist/img/user2-160x160.jpg') }}" class="img-circle" alt="User Image">#}
+                {#</div>#}
+                {#<div class="pull-left info">#}
+                    {#<p>Alexander Pierce</p>#}
+                    {#<!-- Status -->#}
+                    {#<a href="#"><i class="fa fa-circle text-success"></i> Online</a>#}
+                {#</div>#}
+            {#</div>#}
 
-            <!-- search form (Optional) -->
-            <form action="#" method="get" class="sidebar-form">
-                <div class="input-group">
-                    <input type="text" name="q" class="form-control" placeholder="Search...">
-              <span class="input-group-btn">
-                <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
-                </button>
-              </span>
-                </div>
-            </form>
-            <!-- /.search form -->
+            {#<!-- search form (Optional) -->#}
+            {#<form action="#" method="get" class="sidebar-form">#}
+                {#<div class="input-group">#}
+                    {#<input type="text" name="q" class="form-control" placeholder="Search...">#}
+              {#<span class="input-group-btn">#}
+                {#<button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>#}
+                {#</button>#}
+              {#</span>#}
+                {#</div>#}
+            {#</form>#}
+            {#<!-- /.search form -->#}
 
-            <!-- Sidebar Menu -->
-            <ul class="sidebar-menu">
-                <li class="header">HEADER</li>
-                <!-- Optionally, you can add icons to the links -->
-                <li class="active"><a href="#"><i class="fa fa-link"></i> <span>Link</span></a></li>
-                <li><a href="#"><i class="fa fa-link"></i> <span>Another Link</span></a></li>
-                <li class="treeview">
-                    <a href="#"><i class="fa fa-link"></i> <span>Multilevel</span> <i class="fa fa-angle-left pull-right"></i></a>
-                    <ul class="treeview-menu">
-                        <li><a href="#">Link in level 2</a></li>
-                        <li><a href="#">Link in level 2</a></li>
-                    </ul>
-                </li>
-            </ul>
-            <!-- /.sidebar-menu -->
-            #}
-        </section>
-        <!-- /.sidebar -->
-    </aside>
+            {#<!-- Sidebar Menu -->#}
+            {#<ul class="sidebar-menu">#}
+                {#<li class="header">HEADER</li>#}
+                {#<!-- Optionally, you can add icons to the links -->#}
+                {#<li class="active"><a href="#"><i class="fa fa-link"></i> <span>Link</span></a></li>#}
+                {#<li><a href="#"><i class="fa fa-link"></i> <span>Another Link</span></a></li>#}
+                {#<li class="treeview">#}
+                    {#<a href="#"><i class="fa fa-link"></i> <span>Multilevel</span> <i class="fa fa-angle-left pull-right"></i></a>#}
+                    {#<ul class="treeview-menu">#}
+                        {#<li><a href="#">Link in level 2</a></li>#}
+                        {#<li><a href="#">Link in level 2</a></li>#}
+                    {#</ul>#}
+                {#</li>#}
+            {#</ul>#}
+            {#<!-- /.sidebar-menu -->#}
+            {##}
+        {#</section>#}
+        {#<!-- /.sidebar -->#}
+        {##}
+        {##}
+    {#</aside>#}
 
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
