--- a/app/Resources/AvanzuAdminThemeBundle/views/layout/default-layout.html.twig
+++ b/app/Resources/AvanzuAdminThemeBundle/views/layout/default-layout.html.twig
@@ -354,7 +354,14 @@ desired effect
     <!-- Main Footer -->
 
     {% block avanzu_footer %}
-        {% include 'AvanzuAdminThemeBundle:Partials:_footer.html.twig' %}
+        <footer class="main-footer">
+            <!-- To the right -->
+            <div class="pull-right hidden-xs">
+                Informatika Saila
+            </div>
+            <!-- Default to the left -->
+            <strong><a href="http://www.pasaia.eus" target="_blank">Pasaiako Udala</a></strong>
+        </footer>
     {% endblock %}
     {% block avanzu_control_sidebar %}
         {% if avanzu_admin_context.control_sidebar %}
