Datepicker when submit button click

--- a/app/Resources/views/grafikak/index.html.twig
+++ b/app/Resources/views/grafikak/index.html.twig
@@ -58,7 +58,7 @@
                             <div class="form-group noleftmargin">
                                 <div class="col-sm-5"></div>
                                 {{ form_label(form.Onartu, null,  { 'label_attr': {'class': 'control-label col-sm-1'} }) }}
-                                {{ form_widget(form.Onartu, { 'attr': {'class': 'col-sm-2 datepicker'} }) }}
+                                {{ form_widget(form.Onartu, { 'attr': {'class': 'col-sm-2'} }) }}
                                 <div class="col-sm-5"></div>
                             </div>
                         </div>
