--- a/app/Resources/views/grafikak/index.html.twig
+++ b/app/Resources/views/grafikak/index.html.twig
@@ -33,7 +33,8 @@
     <div class="row">
         <div class="col-md-12">
             <div class="box box-solid box-warning">
-                <div class="box-header with-border">
+                <div class="box-header with-border" data-widget="collapse">
+                    <i class="fa fa-plus"></i>
                     <h3 class="box-title">Filtroak</h3>
                     <div class="box-tools pull-right">
                         <button type="button" id="btnCollapse" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
@@ -338,6 +339,7 @@
 
                 });
             });
+
 
 
             $("#btnCollapse").click();
