--- a/app/Resources/views/arreta/edit.html.twig
+++ b/app/Resources/views/arreta/edit.html.twig
@@ -436,73 +436,27 @@
 
     <input id="txtLocale" type="hidden" value="{{ app.request.locale }}">
 
-{% endblock %}
+{% endblock content_content %}
 
 {% block content_sidebar %}
     <div class="row">
         <div class="col-xs-12">
             <label for="txtNan">N.A.N.</label>
             <input id="txtNan" name="txtNan" type="text" value="">
+            <button id="btnNan"><i class="fa fa-search"></i></button>
         </div>
     </div>
     <div class="row">
         <div class="col-xs-12">
-            <label>Etxebizitza Zenbakia <span id="txtBizilekuZenbakia"></span></label>
+            <dl>
+                <dt>Etxebizitza zenbakia</dt>
+                <dt id="txtBizilekuZenbakia"></dt>
+                <dt>Izen Abizenak</dt>
+                <dd id="txtFullName"></dd>
+                <dt>Txartelak</dt>
+                <dd id="txtTxartelak"></dd>
+            </dl>
         </div>
     </div>
 {% endblock content_sidebar %}
 
-{% block foot_script %}
-    {{ parent() }}
-
-    <script>
-
-        $(document).ready(function () {
-
-            var url = document.location.toString();
-            if ( url.match("#") ) {
-                $(".nav-tabs a[href=\"#" + url.split("#")[1] + "\"]").tab("show");
-            }
-
-            var url3 = "http://zerbikat.sare.gipuzkoa.net/api/sailak/064.json";
-            $.getJSON(url3, function ( data ) {
-                $.each(data, function ( key, val ) {
-                    if ( !("parent" in val) ) {
-                        if ( $("#txtLocale").val() === "eu" ) {
-                            $("#cmbFamilia").append("<option value='" + val.id + "'>" + val.sailaeu + "</option>");
-                        } else {
-                            $("#cmbFamilia").append("<option value='" + val.id + "'>" + val.sailaes + "</option>");
-                        }
-                    }
-                });
-            }).fail(function ( jqXHR, textStatus, errorThrown ) {
-                console.log("error " + textStatus);
-                console.log("incoming Text " + jqXHR.responseText);
-            });
-
-
-            var urlHelbideak = "http://172.23.64.29:3000/";
-            $.getJSON(urlHelbideak, function ( data ) {
-                $.each(data, function ( key, val ) {
-                    $("#helbidea").append("<option value='" + val.izena + "'>" + val.izena + "</option>");
-                });
-            }).fail(function ( jqXHR, textStatus, errorThrown ) {
-                console.log("error " + textStatus);
-                console.log("incoming Text " + jqXHR.responseText);
-            });
-
-            $("#helbidea").on("change", function () {
-                var h = $(this).val();
-
-                if ( h === "-1" ) {
-                    $("#txtGerkudHelbidea").val("");
-                } else {
-                    $("#txtGerkudHelbidea").val(h);
-                }
-
-            });
-
-        });
-
-    </script>
-{% endblock %}
